--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,7 @@ Pillow>=9.2.0
 scikit-image>=0.19.0
 flask>=2.0.0
 werkzeug>=2.0.0
-
-# Optional: Production server (install if deploying)
-# gunicorn>=20.1.0
+gunicorn>=20.1.0
 
 # Optional: Training dependencies (only install if retraining the model)
 # matplotlib>=3.5.0
