--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,9 @@ services:
     name: refocusing-demo
     runtime: python
     buildCommand: pip install -r requirements.txt && python download_model.py
-    startCommand: gunicorn --bind 0.0.0.0:$PORT --workers 2 --timeout 120 app:app
+    startCommand: gunicorn --bind 0.0.0.0:$PORT --workers 1 --timeout 300 app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.0
+      - key: PYTORCH_CUDA_ALLOC_CONF
+        value: max_split_size_mb:128
